# generalization-profiles

./: .gitignore  1_run_segmentation.py  2_compute_segment_surprisals.py  3_compute_embeddings.py  4_find_neighbors.py  5_aggregate_surprisals.py  6_compute_profiles.py  README.md  aggregate_surprisals.py  display_app.py  fix.sh  pyproject.toml
generalization_profiles/: __init__.py  aggregate_surprisals.py  compute_profile.py  compute_profile2.py  compute_profiles.py  compute_segment_surprisals.py  compute_sentence_level_profile.py  data.py  embeddings.py  find_neighbors.py  generate_plots.py  models.py  neighborhood_aggregation.py  plotting.py  pythia.py  pythia_facts.py  pythia_model.py  sentence_dataset.py
scrap/: NEIGHBOR_EXAMPLES.txt  dataset_stuff.py  display_app.py  make_many_profiles.py  sentence_neighbors.py
