[project]
name = "generalization-profiles"
version = "0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets",
    "differences",
    "fire",
    "huggingface-hub",
    "ipywidgets",
    "jupyter",
    "matplotlib",
    "numpy<2.0",
    "scikit-learn",
    "sentence-transformers",
    "transformers",
]

[tool.ruff]
line-length = 80
exclude = [".pyenv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
