[project]
name = "generalization-profiles"
version = "0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.2",
    "datasets",
    "differences",
    "fire",
    "huggingface-hub",
    "ipywidgets",
    "jupyter",
    "jupyter-bokeh>=4.0.5",
    "matplotlib",
    "numpy<2.0",
    "panel>=1.8.5",
    "scikit-learn",
    "sentence-transformers",
    "transformers",
]

[tool.ruff]
line-length = 80
exclude = [".pyenv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
