[project]
name = "generalization-profiles"
version = "0.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.8.2",
    "datasets",
    "differences",
    "fire",
    "google-genai>=1.62.0",
    "huggingface-hub",
    "ipywidgets",
    "jupyter",
    "jupyter-bokeh>=4.0.5",
    "matplotlib",
    "numpy<2.0",
    "panel>=1.8.5",
    "pip>=26.0.1",
    "pyahocorasick>=2.3.0",
    "ruff>=0.15.0",
    "scikit-learn",
    "sentence-transformers",
    "spacy>=3.8.11",
    "transformers",
]

[tool.ruff]
line-length = 80
exclude = [".pyenv"]

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
